# strava-agent

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh
design-system/paceos/: MASTER.md
design-system/paceos/pages/: dashboard.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/activities/: page.tsx
frontend/app/body/: page.tsx
frontend/app/coach/: page.tsx
frontend/app/plan/: page.tsx
frontend/components/: activity-detail-charts.tsx  activity-route-map.tsx  app-shell.tsx  body-composition-view.tsx  chicago-mark.tsx  coach-session.tsx  device-insights.tsx  home-command-center.tsx  interactive-week.tsx  live-data-refresh.tsx  live-date-badge.tsx  offline-state.tsx  plan-calendar.tsx  race-countdown.tsx  recovery-strip.tsx  running-dynamics-charts.tsx  session-completion-check.tsx  settings-form.tsx  training-now.tsx  volume-chart.tsx  weekly-checkin.tsx
frontend/lib/: activity-display.ts  api.ts  local-clock.ts  types.ts
scripts/: import_apple_health_export.py
src/strava_agent/: __init__.py  activity_streams.py  ai_coach.py  apple_health.py  apple_health_export.py  config.py  database.py  google_health.py  importers.py  metrics.py  training_plan.py
tests/: test_ai_coach.py  test_api_smoke.py  test_apple_health.py  test_apple_health_export.py  test_daily_state.py  test_database.py  test_google_health.py  test_importers.py  test_metrics.py  test_training_plan.py
(+7 files in other folders)
