[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "strava-marathon-coach"
version = "0.1.0"
description = "Entrenador local para preparar el Maraton de Chicago con datos de Strava"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "requests>=2.32,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "fitdecode>=0.11,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
