[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "paceos-running-intelligence"
version = "0.1.0"
description = "Running intelligence local con Apple Health, Fitbit y Coach AI"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "requests>=2.32,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
